[tool.poetry]
name = "ask-me-again"
version = "0.1.0"
description = "Quiz app"
authors = ["Robert Levchenko <ro.le.00@mail.ru>"]
license = "MIT"
readme = "README.md"
packages = [{include = "ask_me_again"}]

[tool.poetry.dependencies]
python = "^3.8"
pyqt6 = "*"
pyqt6-tools = "^6.4.2.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
